--- a/examples/pod_err.yaml
+++ b/examples/pod_err.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: es
+  name: es1
   namespace: default
 spec:
   restartPolicy: OnFailure
@@ -9,13 +9,7 @@ spec:
     - name: n1
       image: "nginx:latest"
       ports:
-        - containerPort: 8090
+        - containerPort: 8094
       extendedResourceClaims:
-      - "erc1"
-    - name: n2
-      image: "redis:latest"
-      ports:
-        - containerPort: 8091
-      extendedResourceClaims:
-      - "erc2"
+      - "erc4"
       
